# Llvm.NET

./: .gitignore  Build-DXC-Batch.bat  Build-DXC.ps1  Build-Interop.ps1  Directory.Build.props
DxcUtil/: Llvm-Libs.props  Llvm-Libs.targets  llvm-version.json
src/Interop/InteropTests/: OrcJitTests.cs
src/Interop/LibLLVM/: AttributeBindings.cpp  ContextBindings.cpp  DIBuilderBindings.cpp  DxilBindings.cpp  DxilDisassemblerBindings.cpp  IRBindings.cpp  InlinedExports.cpp  LibLLVM.Test.vcxproj  LibLLVM.Test.vcxproj.filters  LibLLVM.vcxproj  (+6 more)
src/Interop/Ubiquity.NET.Llvm.Interop/: CMakeLists.txt  Library.cs  StrippedFunctionException.cs  Ubiquity.NET.Llvm.Interop.Test.csproj
src/Interop/Ubiquity.NET.Llvm.Interop/Stripped/: StrippedMethods.cs
src/Interop/Ubiquity.NET.Llvm.Interop/Stripped/Enums/: LLVMAttributeIndex.cs  LLVMBinaryType.cs  LLVMComdatSelectionKind.cs  LLVMDIFlags.cs  LLVMDWARFEmissionKind.cs  LLVMDWARFMacinfoRecordType.cs  LLVMDWARFSourceLanguage.cs  LLVMMetadataKind.cs  LLVMModuleFlagBehavior.cs  LLVMUnnamedAddr.cs  LibLLVMDwarfSourceLanguage.cs
src/Interop/Ubiquity.NET.Llvm.Interop/Stripped/Handles/: LLVMAttributeRef.g.cs  LLVMBinaryRef.g.cs  LLVMComdatRef.g.cs  LLVMDIBuilderRef.g.cs  LLVMErrorRef.g.cs  LLVMJITEventListenerRef.g.cs  LLVMMetadataRef.g.cs  LLVMModuleFlagEntry.g.cs  LLVMNamedMDNodeRef.g.cs  LLVMOrcJITStackRef.g.cs  LLVMValueMetadataEntry.g.cs
src/Interop/Ubiquity.NET.Llvm.Interop/Stripped/Methods/: Comdat.g.cs  DebugInfo.g.cs  OrcBindings.g.cs
src/Ubiquity.NET.Llvm/: BitcodeModule.cs  Target.cs  Ubiquity.NET.Llvm.Test.csproj
(+26 files in other folders)
